<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.engrehammetwally.yoga.SettingsActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioGroup
            android:id="@+id/rgMode"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rBtnEasy"
                android:theme="@style/MyRadioButtonTheme"
                android:text="@string/easy"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <RadioButton
                android:id="@+id/rBtnMedium"
                android:theme="@style/MyRadioButtonTheme"
                android:text="@string/medium"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <RadioButton
                android:id="@+id/rBtnHard"
                android:theme="@style/MyRadioButtonTheme"
                android:text="@string/hard"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </RadioGroup>



    </androidx.cardview.widget.CardView>
    <ToggleButton
        android:textOn="@string/on"
        android:textOff="@string/off"
        android:id="@+id/toggleBtn"
        android:layout_below="@+id/cardview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"/>
    <TimePicker
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/toggleBtn"
        android:id="@+id/timePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:background="@color/colorPrimary"

        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:shadowColor="@color/colorPrimaryDark"
        android:text="@string/save"
        android:textColor="@android:color/white"/>


</RelativeLayout>
